feat: add permission toggle apis
