# internal/router/user_role_router.go
@@ -8,10 +8,12 @@ func (r *Router) SetupUserRoleRoutes() {
 	router.Use(r.ratelimit.RateLimitByUser(120, "ADMIN-ROLE"))
 	{
 		router.GET("/:id", r.auth.PermissionCheckAny(constant.PermissionRoleRead), r.handler.UserRole().GetByID)
+		router.GET("/:id/permissions", r.auth.PermissionCheckAny(constant.PermissionRoleRead), r.handler.UserRole().GetPermissionConfig)
 		router.GET("/table", r.auth.PermissionCheckAny(constant.PermissionRoleRead), r.handler.UserRole().GetTable)
 		router.POST("", r.auth.PermissionCheckAny(constant.PermissionRoleCreate), r.handler.UserRole().Create)
 		router.PUT("/:id", r.auth.PermissionCheckAny(constant.PermissionRoleUpdate), r.handler.UserRole().Update)
 		router.PUT("/:id/permissions", r.auth.PermissionCheckAny(constant.PermissionRoleAssignPermissions), r.handler.UserRole().SetPermissions)
+		router.PATCH("/:id/permissions/:permissionId", r.auth.PermissionCheckAny(constant.PermissionRoleAssignPermissions), r.handler.UserRole().TogglePermission)
 		router.DELETE("/:id", r.auth.PermissionCheckAny(constant.PermissionRoleDelete), r.handler.UserRole().Delete)
 	}
 }
